# device_memory

./: CMakeLists.txt  CMakeLists2.txt
include/: approximated_device_memory.h  navigator_device_memory.h  sys_info.h
mix/: approximated_device_memory.cc  main.cpp  navigator_device_memory.cc  sys_info.cc
src/: approximated_device_memory.cc  main.cpp  navigator_device_memory.cc  sys_info.cc
